HEAD
	+ Set up QA repository only to commercial versions
	+ Clarified doc about qa_updates_always_automatic confkey
3.4.1
	+ Fixed JS regressions on subscribe action
	+ Disable QA updates until next commercial edition
	+ EBox::RemoteServices::Subscription::Check::check recovers for
	  any error raised on users checking
	+ DisasterRecoveryDomains can notify other models
	+ Fix remove conf backup after PSGI migration
	+ Fix overwrite action on remote conf backup
3.4
	+ Port proxy redirections to Nginx from Apache
	+ Use the new PortObserver to report a change in the webadmin
	  listening port
	+ Migrated to use Plack as the application server instead of mod_perl
	+ Updated to use the new haproxy API.
	+ Move run-pending-ops script to core
	+ Move EBox::RemoteServices::RESTClient and RESTResult to core
	  and uses it as base in specific behaviour
	+ Use service instead of deprecated invoke-rc.d for init.d scripts
	+ Set version to 3.4
	+ Remove Disaster Recovery menu entry as it is managed by
	  cloud-prof module
	+ Fix restore remote backup with spaces in the backup name
	+ Fix: Do not subscribe to the newsletter in the wizard if the
	  user requires so
	+ On initial setup, do only reload bundle and restart the service
	  if the server is registered
	+ Fix warning on last inside an eval on automatic-conf-backup script
3.3
	+ Hide close button on subscription progress dialog
	+ Adapted to new AJAX update of save changes button
	+ Switch from Error to TryCatch for exception handling
	+ Adapted to new AJAX update of save changes button
	+ Update support information due to offer 2013
	+ Update messages in info models
	+ Show ad messages in SubscriptionInfo model
	+ Remove useless code due to offer 2013
	+ Retrieve the maximum users from Zentyal Remote
	+ Added new i18n editions
	+ Store an ad message instead of enforcing max number of users
	  in the registration check
	+ Now the module has support to store ad messages