@@ -1,4 +1,6 @@
 HEAD
+	+ Give support to set monitoring servers on rs_monitoring_servers
+	  conf key
 	+ Set up QA repository only to commercial versions
 	+ Clarified doc about qa_updates_always_automatic confkey
 3.4.1
